TigerCompiler/Recognizers/TigerParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g 2014-03-10 16:22:34

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System;
using TigerCompiler.ErrorHandling;


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class TigerParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALIAS_TYPE_DECLARATION", "AND", "ARRAY", "ARRAY_INDEX", "ARRAY_TYPE_DECLARATION", "ASSIGN", "BREAK", "COLON", "COMMA", "COMMENT", "DIGIT", "DIV", "DO", "DOT", "ELSE", "END", "EQUAL", "ESC_SEQ", "EXPRESSION", "EXPRESSION_SEQ", "FOR", "FUNCTION", "FUNCTION_DECLARATION", "GREATER_EQUAL_THAN", "GREATER_THAN", "IDENTIFIER", "IF", "IF_THEN", "IF_THEN_ELSE", "IN", "INT", "LBRACE", "LBRACKET", "LESS_EQUAL_THAN", "LESS_THAN", "LET", "LETTER", "LPARENTHESIS", "LVALUE", "MINUS", "MULT", "NEGATE", "NIL", "NOT_EQUAL", "OF", "OR", "PLUS", "RBRACE", "RBRACKET", "RECORD", "RECORD_TYPE_DECLARATION", "RETURN_TYPE", "RPARENTHESIS", "SEMICOLON", "STRING", "THEN", "TO", "TYPE", "TYPE_DECLARATION", "TYPE_DECLARATION_FIELD", "VAR", "VAR_DECLARATION", "WHILE", "WS"
	};
	public const int EOF=-1;
	public const int ALIAS_TYPE_DECLARATION=4;
	public const int AND=5;
	public const int ARRAY=6;
	public const int ARRAY_INDEX=7;
	public const int ARRAY_TYPE_DECLARATION=8;
	public const int ASSIGN=9;
	public const int BREAK=10;
	public const int COLON=11;
	public const int COMMA=12;
	public const int COMMENT=13;
	public const int DIGIT=14;
	public const int DIV=15;
	public const int DO=16;
	public const int DOT=17;
	public const int ELSE=18;
	public const int END=19;
	public const int EQUAL=20;
	public const int ESC_SEQ=21;
	public const int EXPRESSION=22;
	public const int EXPRESSION_SEQ=23;
	public const int FOR=24;
	public const int FUNCTION=25;
	public const int FUNCTION_DECLARATION=26;
	public const int GREATER_EQUAL_THAN=27;
	public const int GREATER_THAN=28;
	public const int IDENTIFIER=29;
	public const int IF=30;
	public const int IF_THEN=31;
	public const int IF_THEN_ELSE=32;
	public const int IN=33;
	public const int INT=34;
	public const int LBRACE=35;
	public const int LBRACKET=36;
	public const int LESS_EQUAL_THAN=37;
	public const int LESS_THAN=38;
	public const int LET=39;
	public const int LETTER=40;
	public const int LPARENTHESIS=41;
	public const int LVALUE=42;
	public const int MINUS=43;
	public const int MULT=44;
	public const int NEGATE=45;
	public const int NIL=46;
	public const int NOT_EQUAL=47;
	public const int OF=48;
	public const int OR=49;
	public const int PLUS=50;
	public const int RBRACE=51;
	public const int RBRACKET=52;
	public const int RECORD=53;
	public const int RECORD_TYPE_DECLARATION=54;
	public const int RETURN_TYPE=55;
	public const int RPARENTHESIS=56;
	public const int SEMICOLON=57;
	public const int STRING=58;
	public const int THEN=59;
	public const int TO=60;
	public const int TYPE=61;
	public const int TYPE_DECLARATION=62;
	public const int TYPE_DECLARATION_FIELD=63;
	public const int VAR=64;
	public const int VAR_DECLARATION=65;
	public const int WHILE=66;
	public const int WS=67;

	public TigerParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public TigerParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return TigerParser.tokenNames; } }
	public override string GrammarFileName { get { return "D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g"; } }


	public override void ReportError(RecognitionException exc) { 
		Errors.AddSintacticError(exc, TokenNames);
	} 


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:126:8: public program : expr EOF -> ^( EXPRESSION expr ) ;
	[GrammarRule("program")]
	public AstParserRuleReturnScope<object, IToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken EOF2 = default(IToken);
		AstParserRuleReturnScope<object, IToken> expr1 = default(AstParserRuleReturnScope<object, IToken>);

		object EOF2_tree = default(object);
		RewriteRuleITokenStream stream_EOF=new RewriteRuleITokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(126, 1);
		try
		{
			// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:127:2: ( expr EOF -> ^( EXPRESSION expr ) )
			DebugEnterAlt(1);
			// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:127:4: expr EOF
			{
			DebugLocation(127, 4);
			PushFollow(Follow._expr_in_program685);
			expr1=expr();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_expr.Add(expr1.Tree);
			DebugLocation(127, 9);
			EOF2=(IToken)Match(input,EOF,Follow._EOF_in_program687); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_EOF.Add(EOF2);



			{
			// AST REWRITE
			// elements: expr
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 127:13: -> ^( EXPRESSION expr )
			{
				DebugLocation(127, 16);
				// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:127:16: ^( EXPRESSION expr )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(127, 18);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(EXPRESSION, "EXPRESSION"), root_1);

				DebugLocation(127, 29);
				adaptor.AddChild(root_1, stream_expr.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(128, 1);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	partial void EnterRule_expr();
	partial void LeaveRule_expr();

	// $ANTLR start "expr"
	// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:129:1: expr : conjunction_term ( ( OR ^| AND ^) conjunction_term )* ;
	[GrammarRule("expr")]
	private AstParserRuleReturnScope<object, IToken> expr()
	{
		EnterRule_expr();
		EnterRule("expr", 2);
		TraceIn("expr", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken OR4 = default(IToken);
		IToken AND5 = default(IToken);
		AstParserRuleReturnScope<object, IToken> conjunction_term3 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> conjunction_term6 = default(AstParserRuleReturnScope<object, IToken>);

		object OR4_tree = default(object);
		object AND5_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "expr");
		DebugLocation(129, 1);
		try
		{
			// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:129:6: ( conjunction_term ( ( OR ^| AND ^) conjunction_term )* )
			DebugEnterAlt(1);
			// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:129:8: conjunction_term ( ( OR ^| AND ^) conjunction_term )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(129, 8);
			PushFollow(Follow._conjunction_term_in_expr704);
			conjunction_term3=conjunction_term();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, conjunction_term3.Tree);
			DebugLocation(129, 25);
			// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:129:25: ( ( OR ^| AND ^) conjunction_term )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_0 = input.LA(1);

				if ((LA2_0==OR))
				{
					alt2 = 1;
				}
				else if ((LA2_0==AND))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:129:26: ( OR ^| AND ^) conjunction_term
					{
					DebugLocation(129, 26);
					// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:129:26: ( OR ^| AND ^)
					int alt1=2;
					try { DebugEnterSubRule(1);
					try { DebugEnterDecision(1, false);
					int LA1_0 = input.LA(1);

					if ((LA1_0==OR))
					{
						alt1 = 1;
					}
					else if ((LA1_0==AND))
					{
						alt1 = 2;
					}
					else
					{
						if (state.backtracking>0) {state.failed=true; return retval;}
						NoViableAltException nvae = new NoViableAltException("", 1, 0, input);
						DebugRecognitionException(nvae);
						throw nvae;
					}
					} finally { DebugExitDecision(1); }
					switch (alt1)
					{
					case 1:
						DebugEnterAlt(1);
						// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:129:27: OR ^
						{
						DebugLocation(129, 29);
						OR4=(IToken)Match(input,OR,Follow._OR_in_expr708); if (state.failed) return retval;
						if (state.backtracking == 0) {
						OR4_tree = (object)adaptor.Create(OR4);
						root_0 = (object)adaptor.BecomeRoot(OR4_tree, root_0);
						}

						}
						break;
					case 2:
						DebugEnterAlt(2);
						// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:129:31: AND ^
						{
						DebugLocation(129, 34);
						AND5=(IToken)Match(input,AND,Follow._AND_in_expr711); if (state.failed) return retval;
						if (state.backtracking == 0) {
						AND5_tree = (object)adaptor.Create(AND5);
						root_0 = (object)adaptor.BecomeRoot(AND5_tree, root_0);
						}

						}
						break;

					}
					} finally { DebugExitSubRule(1); }

					DebugLocation(129, 37);
					PushFollow(Follow._conjunction_term_in_expr715);
					conjunction_term6=conjunction_term();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, conjunction_term6.Tree);

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("expr", 2);
			LeaveRule("expr", 2);
			LeaveRule_expr();
		}
		DebugLocation(130, 1);
		} finally { DebugExitRule(GrammarFileName, "expr"); }
		return retval;

	}
	// $ANTLR end "expr"

	partial void EnterRule_conjunction_term();
	partial void LeaveRule_conjunction_term();

	// $ANTLR start "conjunction_term"
	// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:131:1: conjunction_term : comparison_term ( ( EQUAL ^| NOT_EQUAL ^| LESS_THAN ^| GREATER_THAN ^| LESS_EQUAL_THAN ^| GREATER_EQUAL_THAN ^) comparison_term )* ;
	[GrammarRule("conjunction_term")]
	private AstParserRuleReturnScope<object, IToken> conjunction_term()
	{
		EnterRule_conjunction_term();
		EnterRule("conjunction_term", 3);
		TraceIn("conjunction_term", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken EQUAL8 = default(IToken);
		IToken NOT_EQUAL9 = default(IToken);
		IToken LESS_THAN10 = default(IToken);
		IToken GREATER_THAN11 = default(IToken);
		IToken LESS_EQUAL_THAN12 = default(IToken);
		IToken GREATER_EQUAL_THAN13 = default(IToken);
		AstParserRuleReturnScope<object, IToken> comparison_term7 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> comparison_term14 = default(AstParserRuleReturnScope<object, IToken>);

		object EQUAL8_tree = default(object);
		object NOT_EQUAL9_tree = default(object);
		object LESS_THAN10_tree = default(object);
		object GREATER_THAN11_tree = default(object);
		object LESS_EQUAL_THAN12_tree = default(object);
		object GREATER_EQUAL_THAN13_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "conjunction_term");
		DebugLocation(131, 1);
		try
		{
			// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:132:2: ( comparison_term ( ( EQUAL ^| NOT_EQUAL ^| LESS_THAN ^| GREATER_THAN ^| LESS_EQUAL_THAN ^| GREATER_EQUAL_THAN ^) comparison_term )* )
			DebugEnterAlt(1);
			// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:132:4: comparison_term ( ( EQUAL ^| NOT_EQUAL ^| LESS_THAN ^| GREATER_THAN ^| LESS_EQUAL_THAN ^| GREATER_EQUAL_THAN ^) comparison_term )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(132, 4);
			PushFollow(Follow._comparison_term_in_conjunction_term727);
			comparison_term7=comparison_term();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, comparison_term7.Tree);
			DebugLocation(132, 20);
			// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:132:20: ( ( EQUAL ^| NOT_EQUAL ^| LESS_THAN ^| GREATER_THAN ^| LESS_EQUAL_THAN ^| GREATER_EQUAL_THAN ^) comparison_term )*
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=2;
				try { DebugEnterDecision(4, false);
				switch (input.LA(1))
				{
				case EQUAL:
					{
					alt4 = 1;
					}
					break;
				case NOT_EQUAL:
					{
					alt4 = 1;
					}
					break;
				case LESS_THAN:
					{
					alt4 = 1;
					}
					break;
				case GREATER_THAN:
					{
					alt4 = 1;
					}
					break;
				case LESS_EQUAL_THAN:
					{
					alt4 = 1;
					}
					break;
				case GREATER_EQUAL_THAN:
					{
					alt4 = 1;
					}
					break;
				}

				} finally { DebugExitDecision(4); }
				switch ( alt4 )
				{
				case 1:
					DebugEnterAlt(1);
					// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:132:21: ( EQUAL ^| NOT_EQUAL ^| LESS_THAN ^| GREATER_THAN ^| LESS_EQUAL_THAN ^| GREATER_EQUAL_THAN ^) comparison_term
					{
					DebugLocation(132, 21);
					// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:132:21: ( EQUAL ^| NOT_EQUAL ^| LESS_THAN ^| GREATER_THAN ^| LESS_EQUAL_THAN ^| GREATER_EQUAL_THAN ^)
					int alt3=6;
					try { DebugEnterSubRule(3);
					try { DebugEnterDecision(3, false);
					switch (input.LA(1))
					{
					case EQUAL:
						{
						alt3 = 1;
						}
						break;
					case NOT_EQUAL:
						{
						alt3 = 2;
						}
						break;
					case LESS_THAN:
						{
						alt3 = 3;
						}
						break;
					case GREATER_THAN:
						{
						alt3 = 4;
						}
						break;
					case LESS_EQUAL_THAN:
						{
						alt3 = 5;
						}
						break;
					case GREATER_EQUAL_THAN:
						{
						alt3 = 6;
						}
						break;
					default:
						{
							if (state.backtracking>0) {state.failed=true; return retval;}
							NoViableAltException nvae = new NoViableAltException("", 3, 0, input);
							DebugRecognitionException(nvae);
							throw nvae;
						}
					}

					} finally { DebugExitDecision(3); }
					switch (alt3)
					{
					case 1:
						DebugEnterAlt(1);
						// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:132:22: EQUAL ^
						{
						DebugLocation(132, 27);
						EQUAL8=(IToken)Match(input,EQUAL,Follow._EQUAL_in_conjunction_term731); if (state.failed) return retval;
						if (state.backtracking == 0) {
						EQUAL8_tree = (object)adaptor.Create(EQUAL8);
						root_0 = (object)adaptor.BecomeRoot(EQUAL8_tree, root_0);
						}

						}
						break;
					case 2:
						DebugEnterAlt(2);
						// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:132:29: NOT_EQUAL ^
						{
						DebugLocation(132, 38);
						NOT_EQUAL9=(IToken)Match(input,NOT_EQUAL,Follow._NOT_EQUAL_in_conjunction_term734); if (state.failed) return retval;
						if (state.backtracking == 0) {
						NOT_EQUAL9_tree = (object)adaptor.Create(NOT_EQUAL9);
						root_0 = (object)adaptor.BecomeRoot(NOT_EQUAL9_tree, root_0);
						}

						}
						break;
					case 3:
						DebugEnterAlt(3);
						// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:132:40: LESS_THAN ^
						{
						DebugLocation(132, 49);
						LESS_THAN10=(IToken)Match(input,LESS_THAN,Follow._LESS_THAN_in_conjunction_term737); if (state.failed) return retval;
						if (state.backtracking == 0) {
						LESS_THAN10_tree = (object)adaptor.Create(LESS_THAN10);
						root_0 = (object)adaptor.BecomeRoot(LESS_THAN10_tree, root_0);
						}

						}
						break;
					case 4:
						DebugEnterAlt(4);
						// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:132:51: GREATER_THAN ^
						{
						DebugLocation(132, 63);
						GREATER_THAN11=(IToken)Match(input,GREATER_THAN,Follow._GREATER_THAN_in_conjunction_term740); if (state.failed) return retval;
						if (state.backtracking == 0) {
						GREATER_THAN11_tree = (object)adaptor.Create(GREATER_THAN11);
						root_0 = (object)adaptor.BecomeRoot(GREATER_THAN11_tree, root_0);
						}

						}
						break;
					case 5:
						DebugEnterAlt(5);
						// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:132:65: LESS_EQUAL_THAN ^
						{
						DebugLocation(132, 80);
						LESS_EQUAL_THAN12=(IToken)Match(input,LESS_EQUAL_THAN,Follow._LESS_EQUAL_THAN_in_conjunction_term743); if (state.failed) return retval;
						if (state.backtracking == 0) {
						LESS_EQUAL_THAN12_tree = (object)adaptor.Create(LESS_EQUAL_THAN12);
						root_0 = (object)adaptor.BecomeRoot(LESS_EQUAL_THAN12_tree, root_0);
						}

						}
						break;
					case 6:
						DebugEnterAlt(6);
						// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:132:82: GREATER_EQUAL_THAN ^
						{
						DebugLocation(132, 100);
						GREATER_EQUAL_THAN13=(IToken)Match(input,GREATER_EQUAL_THAN,Follow._GREATER_EQUAL_THAN_in_conjunction_term746); if (state.failed) return retval;
						if (state.backtracking == 0) {
						GREATER_EQUAL_THAN13_tree = (object)adaptor.Create(GREATER_EQUAL_THAN13);
						root_0 = (object)adaptor.BecomeRoot(GREATER_EQUAL_THAN13_tree, root_0);
						}

						}
						break;

					}
					} finally { DebugExitSubRule(3); }

					DebugLocation(132, 103);
					PushFollow(Follow._comparison_term_in_conjunction_term750);
					comparison_term14=comparison_term();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, comparison_term14.Tree);

					}
					break;

				default:
					goto loop4;
				}
			}

			loop4:
				;

			} finally { DebugExitSubRule(4); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("conjunction_term", 3);
			LeaveRule("conjunction_term", 3);
			LeaveRule_conjunction_term();
		}
		DebugLocation(133, 1);
		} finally { DebugExitRule(GrammarFileName, "conjunction_term"); }
		return retval;

	}
	// $ANTLR end "conjunction_term"

	partial void EnterRule_comparison_term();
	partial void LeaveRule_comparison_term();

	// $ANTLR start "comparison_term"
	// D:\\Programing\\Projects\\TigerCompiler\\TigerGrammar\\Tiger.g:134:1: comparison_term : term ( ( PLUS ^| MINUS ^) term )* ;
	[GrammarRule("comparison_term")]
	private AstParserRuleReturnScope<object, IToken> comparison_term()
	{
		EnterRule_comparison_term();
		EnterRule("comparison_term", 4);
		TraceIn("comparison_term", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

